test/types/type_variables/deitz/part7/test_generic_error1.chpl
class C {
  type t;
  var x : t;
}

var c: C;
writeln(c);
